client/blocks/reader-recommended-sites/style.scss
.reader-recommended-sites {

	@include breakpoint( "<660px" ) {
		margin: 0 15px;
	}
}

.reader-recommended-sites__header {
	color: $gray-lighten-10;
	font-size: 14px;
	font-weight: 600;
	letter-spacing: 0.01em;
	margin: 13px 0 10px;
	position: relative;
	text-transform: uppercase;

	@include breakpoint( ">660px" ) {
		margin: 13px 0 17px;
	}

	.gridicon {
		fill: $gray-lighten-10;
		margin-right: 5px;
	}
}

.reader-recommended-sites__list {
	display: flex;
	flex-direction: column;
	margin: 0 0 20px;
	padding: 0;

	@include breakpoint( ">960px" ) {
		flex-direction: row;
	}
}

.reader-recommended-sites__site-list-item {
	display: flex;
	flex: 1 1 0%;
	flex-direction: row;
	list-style-type: none;
	width: 100%;
	border: 1px solid red;

	@include breakpoint( ">960px" ) {
		align-items: flex-end;
		flex-direction: column;
		margin-top: -40px;
	}

	> :last-child {
		border: 1px solid blue;
		width: 100%;
	}

	.reader-recommended-sites__recommended-site-dismiss {
		width: 30px;
		border:1px solid green;

		.button.is-borderless .gridicon {
			fill: $gray-lighten-10;
			width: 14px;
			height: 14px;
		}
	}

	.reader-subscription-list-item  .follow-button .follow-button__label {
		border: 1px solid blue;

		@include breakpoint( "<960px" ) {
			display: none;
		}
	}

	&:first-child {

		@include breakpoint( ">960px" ) {
			margin-right: 20px;
		}
	}

	&:last-child {

		@include breakpoint( ">960px" ) {
			margin-left: 20px;
		}
	}

	&:only-child {
		margin-left: 0;
		margin-right: 0;
	}

	.reader-subscription-list-item__site-title {
		color: $blue-medium;
		width: calc( 100% - 70px );
		word-break: break-all;
	}

	.reader-subscription-list-item__by-text,
	.reader-subscription-list-item__site-url {
		display: block;
		max-height: 16px * 1.4;
		overflow: hidden;
		text-overflow: ellipsis;
		position: relative;
		word-break: break-all;
		width: 100%;

		&:not(.is-placeholder) {

			&::after {
				@include long-content-fade( $size: 35px );
			}
		}
	}

	.reader-subscription-list-item.reader-subscription-list-item__placeholder .reader-subscription-list-item__site-url.is-placeholder {
		margin-top: 2px;
	}
}

